--- a/_sass/mutor/_unit.scss
+++ b/_sass/mutor/_unit.scss
@@ -39,6 +39,10 @@ body {
 	h1, h2, h3, h4, h5, h6 {
 	    font-style: oblique;
 	}
+
+	.animation {
+	    text-align: center;
+	}
     }
 
     .unit-main {
