removed the summary section from the info column

--- a/_layouts/unit.html
+++ b/_layouts/unit.html
@@ -60,12 +60,12 @@ layout: default
 	  </ul>
 	</span>
 	
-	<h1 class="unit-info-header">Summary</h1>
-	<span class="unit-info-content" id="unit-info-summary">
-	  <ul>
-	    <li>{{ page.short_description }}</li>
-	  </ul>
-	</span>
+	<!-- <h1 class="unit-info-header">Summary</h1> -->
+	<!-- <span class="unit-info-content" id="unit-info-summary"> -->
+	<!--   <ul> -->
+	<!--     <li>{{ page.short_description }}</li> -->
+	<!--   </ul> -->
+	<!-- </span> -->
 	
 	<h1 class="unit-info-header">Topics</h1>
 	<span class="unit-info-content" id="unit-info-topics">
