changed the style for the header tags to only use xx-large and x-large

--- a/_sass/mutor/_base.scss
+++ b/_sass/mutor/_base.scss
@@ -47,18 +47,21 @@ h2 {
     font-size: x-large;
 }
 h3 {
-    font-size: large;
+    //font-size: large;
+    font-size: x-large;
 }
 h4 {
-    font-size: medium;
-    font-style: oblique;
+    //font-size: medium;
+    font-size: x-large;
+    //font-style: oblique;
 }
 h5 {
-    font-size: small;
+    //font-size: small;
+    font-size: x-large;
 }
 h6 {
-    font-size: small;
-    font-style: oblique;
+    font-size: x-large;
+    //font-style: oblique;
 }
 
 // these force the footer to the bottom, even when the page isn't full
