moved legal links to the left and added logos for uni hamburg and mmkh

--- a/_sass/mutor/_footer.scss
+++ b/_sass/mutor/_footer.scss
@@ -24,7 +24,7 @@
 	span.links {
 	    display: table-cell;
 	    //width: 100%;
-	    text-align: center;
+	    text-align: left;
 	    vertical-align: middle;
 	    padding: 25px 0 25px 0;
 
