--- a/_sass/mutor/_unit.scss
+++ b/_sass/mutor/_unit.scss
@@ -75,6 +75,7 @@ body {
 	h2 {
 	    counter-reset: subsubsection;
 	    counter-increment: subsection;
+	    font-style: normal;
 	}
 	
 	h2:before {
@@ -84,6 +85,7 @@ body {
 	h3 {
 	    counter-reset: subsubsubsection;
 	    counter-increment: subsubsection;
+	    font-style: normal;
 	}
 
 	h3:before {
@@ -92,6 +94,7 @@ body {
 
 	h4 {
 	    /* counter-increment: subsubsubsection; */
+	    font-style: normal;
 	}
 
 	h4:before {
